Fix annoying double scrollbars when image upload button is shown on css:hover

--- a/webclient/style.css
+++ b/webclient/style.css
@@ -47,7 +47,7 @@ textarea {
 }
 .window-content {
     position: relative;
-    overflow-y: auto;
+    overflow: hidden;
     display: flex;
     flex: 1;
 }
